--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.0.1",
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1"
