--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-react-app",
-  "private": true,
+  "homepage": "https://mihir280.github.io/Weather_App/",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
